--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,26 +11,18 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
+<!-- New style rendering for defined publication categories -->
+{% assign categories = "Journal and Conference Papers|Preprints|Posters|Talks and Presentations" | split: "|" %}
+{% for category in categories %}
+  {% assign title_shown = false %}
   {% for post in site.publications reversed %}
+    {% if post.category != category %}
+      {% continue %}
+    {% endif %}
+    {% unless title_shown %}
+      <h2>{{ category }}</h2><hr />
+      {% assign title_shown = true %}
+    {% endunless %}
     {% include archive-single.html %}
   {% endfor %}
-{% endif %}
-
-
-
+{% endfor %}
