--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,30 +5,26 @@ permalink: /service-memberships-teaching/
 author_profile: true
 ---
 
-<!-- Check for a map link if needed -->
-{% if site.talkmap_link == true %}
-<p style="text-decoration:underline;">
-  <a href="/talkmap.html">See a map of all the places I've given a talk!</a>
-</p>
-{% endif %}
-
 <!-- Teaching Section -->
 <h2>Teaching</h2>
 <hr />
-{% for post in site.teaching %}
-  {% include archive-single.html %}
-{% endfor %}
+{% assign teaching_file = site.talks | where: "title", "Teaching" | first %}
+<div class="teaching-content">
+  {{ teaching_file.content }}
+</div>
 
 <!-- Service Section -->
 <h2>Service</h2>
 <hr />
-{% for post in site.service %}
-  {% include archive-single.html %}
-{% endfor %}
+{% assign service_file = site.talks | where: "title", "Service" | first %}
+<div class="service-content">
+  {{ service_file.content }}
+</div>
 
 <!-- Memberships Section -->
 <h2>Memberships</h2>
 <hr />
-{% for post in site.memberships %}
-  {% include archive-single.html %}
-{% endfor %}
+{% assign memberships_file = site.talks | where: "title", "Memberships" | first %}
+<div class="memberships-content">
+  {{ memberships_file.content }}
+</div>
