Update and rename talk.html to service.html

--- a/_pages/service.html
+++ b/_pages/service.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "Service, Memberships, and Teaching"
-permalink: /service-memberships-teaching/
+permalink: /service/
 author_profile: true
 ---
 
